fix: label wrapping issues and write docs

--- a/apps/demo-app/src/app/content/viz-components/axes-content/axes-content.component.scss
+++ b/apps/demo-app/src/app/content/viz-components/axes-content/axes-content.component.scss
@@ -1,4 +1,5 @@
 @use 'functions' as *;
+@use 'index' as hsi-adk;
 
 .axes-content-container {
   .main-content {
@@ -28,6 +29,11 @@
     padding-bottom: grid(1);
   }
 
+  .example.quant-quant {
+    position: relative;
+    top: 8px;
+  }
+
   .dots-example .vic-chart-svg > g:nth-child(2),
   .dots-example .vic-chart-svg > g:nth-child(5) {
     display: none;
@@ -36,5 +42,23 @@
   .bars-simple-states-example .vic-chart-svg > g:nth-child(2),
   .bars-simple-states-example .vic-chart-svg > g:nth-child(5) {
     display: none;
+  }
+
+  .small-examples-container.labels {
+    justify-content: space-evenly;
+    width: 100%;
+    padding: grid(6) 0 grid(10) 0;
+
+    .vic-x.vic-axis-g .tick,
+    .vic-y.vic-axis-g .tick,
+    .vic-x.vic-axis-g .domain,
+    .vic-y.vic-axis-g .domain {
+      opacity: 0.3;
+    }
+  }
+
+  .chart-title {
+    @include hsi-adk.label-xs;
+    padding-bottom: grid(4);
   }
 }
